Update packages, papers, CV, teaching.

--- a/src/app/(mdxPages)/teaching.mdx
+++ b/src/app/(mdxPages)/teaching.mdx
@@ -22,6 +22,8 @@ This class has since been renamed to *6.106: Software Performance Engineering*.
 
 ## Guest lectures
 
+*What Compilers Can and Cannot Do*.  Guest lecture in 6.106: Software Performance Engineering.  Last presented Fall 2024.  [Handout (md)](/presentations/what-compilers-can-and-cannot-do.md).
+
 *C to Assembly*.  Guest lecture in 6.106: Software Performance Engineering.  Last presented Fall 2024.  [Handout (md)](/presentations/c2assembly.md).
 
 *Revisiting Matrix Multiplication*.  Guest lecture in 6.506: Algorithm Engineering, Spring 2023.  [Slides (pdf)](/presentations/6506-guest-lecture-2023.pdf)
