Update CV, project list, papers, packages.

--- a/src/app/(mdxPages)/projects.mdx
+++ b/src/app/(mdxPages)/projects.mdx
@@ -35,6 +35,10 @@ OpenCilk is completely open source and available on [GitHub](https://github.com/
 
 <Reference citekeys={["SchardlLe23", "SchardlMoLe19", "SchardlMoLe17"]} />
 
+## CHEFSI
+
+[CHEFSI](https://chefsi.mit.edu) is an interdisciplinary research center at MIT focused on the exascale simulation of coupled high enthalpy fluid-solid interactions.  See the CHEFSI website for details.
+
 ## CESMIX
 
 [CESMIX](https://cesmix.mit.edu) is an interdisciplinary research center at MIT focused on the exascale simulation of materials in hypersonic flow environments.  See the CESMIX website for details.
